pre-commit autoupdate
`pre-commit autoupdate` and fix/ignore pyupgrade issues.

--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -124,8 +124,7 @@
     "for reaction in sbml_model.getListOfReactions():\n",
     "    reactants = \" + \".join(\n",
     "        [\n",
-    "            \"%s %s\"\n",
-    "            % (\n",
+    "            \"{} {}\".format(\n",
     "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
     "                r.getSpecies(),\n",
     "            )\n",
@@ -134,8 +133,7 @@
     "    )\n",
     "    products = \" + \".join(\n",
     "        [\n",
-    "            \"%s %s\"\n",
-    "            % (\n",
+    "            \"{} {}\".format(\n",
     "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
     "                r.getSpecies(),\n",
     "            )\n",
@@ -144,7 +142,7 @@
     "    )\n",
     "    reversible = \"<\" if reaction.getReversible() else \"\"\n",
     "    print(\n",
-    "        \"%3s: %10s %1s->%10s\\t\\t[%s]\"\n",
+    "        \"%3s: %10s %1s->%10s\\t\\t[%s]\"  # noqa: UP031\n",
     "        % (\n",
     "            reaction.getId(),\n",
     "            reactants,\n",
@@ -370,7 +368,7 @@
     "\n",
     "# np.set_printoptions(threshold=8, edgeitems=2)\n",
     "for key, value in rdata.items():\n",
-    "    print(\"%12s: \" % key, value)"
+    "    print(f\"{key:12s}: \", value)"
    ]
   },
   {
@@ -664,15 +662,15 @@
     "Since the Eigenvalues of the Jacobian are negative and since the Jacobian at steady state is a fixed matrix, this system has a simple algebraic solution:\n",
     "\n",
     "   $$p(t) = e^{t J(x^*, \\theta)^T} p_{\\text{end}}.$$\n",
-    "   \n",
+    "\n",
     "As a consequence, the quadratures in adjoint computation also reduce to a matrix-vector product:\n",
     "\n",
     "   $$Q(x, \\theta) = Q(x^*, \\theta) = p_{\\text{integral}} * \\frac{\\partial f}{\\partial \\theta}$$\n",
     "\n",
     "with\n",
     "\n",
-    "   $$p_{\\text{integral}} = \\int_0^\\infty p(s) ds = (J(x^*, \\theta)^T)^{-1} p_{\\text{end}}.$$ \n",
-    "   \n",
+    "   $$p_{\\text{integral}} = \\int_0^\\infty p(s) ds = (J(x^*, \\theta)^T)^{-1} p_{\\text{end}}.$$\n",
+    "\n",
     "However, this solution is given in terms of a linear system of equations defined by the transposed Jacobian of the right hand side. Hence, if the (transposed) Jacobian is singular, it is not applicable.\n",
     "In this case, standard integration must be carried out."
    ]
@@ -922,7 +920,7 @@
     "\n",
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)"
+    "        print(f\"{key:20s}:\", value)"
    ]
   },
   {
@@ -960,7 +958,7 @@
     "\n",
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)"
+    "        print(f\"{key:20s}:\", value)"
    ]
   },
   {
@@ -993,7 +991,7 @@
     "\n",
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)"
+    "        print(f\"{key:20s}:\", value)"
    ]
   },
   {
@@ -1044,7 +1042,7 @@
     "\n",
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)\n",
+    "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
    ]
   },
@@ -1079,7 +1077,7 @@
     "\n",
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)\n",
+    "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
    ]
   },
@@ -1117,7 +1115,7 @@
     "\n",
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)\n",
+    "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
    ]
   },
@@ -1160,7 +1158,7 @@
     "\n",
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
-    "        print(\"%20s: \" % key, value)\n",
+    "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata[\"sllh\"])"
    ]
   },
