--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -76,9 +76,7 @@
    "outputs": [],
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
-    "amici_model = import_petab_problem(\n",
-    "    petab_problem, verbose=False, compile_=None\n",
-    ")\n",
+    "amici_model = import_petab_problem(petab_problem, verbose=False, compile_=None)\n",
     "\n",
     "np.random.seed(2991)\n",
     "problem_parameters = dict(\n",
@@ -422,9 +420,7 @@
    "outputs": [],
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Weber_BMC2015\")\n",
-    "amici_model = import_petab_problem(\n",
-    "    petab_problem, verbose=False, compile_=None\n",
-    ")\n",
+    "amici_model = import_petab_problem(petab_problem, verbose=False, compile_=None)\n",
     "\n",
     "np.random.seed(4)\n",
     "problem_parameters = dict(\n",
