--- a/python/examples/example_petab/petab.ipynb
+++ b/python/examples/example_petab/petab.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Importing a PEtab problem"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Importing a PEtab problem"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,6 +134,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "app = PetabProblem(petab_problem)\n",
@@ -143,43 +147,41 @@
     "\n",
     "# ExpData for a single condition:\n",
     "edata = app.get_edata(\"model1_data1\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "rdata = runAmiciSimulation(amici_model, solver=amici_model.getSolver(), edata=edata)\n",
+    "rdata = runAmiciSimulation(\n",
+    "    amici_model, solver=amici_model.getSolver(), edata=edata\n",
+    ")\n",
     "rdata"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "plot_state_trajectories(rdata)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "For further information, check out the [AMICI documentation](https://amici.readthedocs.io/en/latest/)."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "For further information, check out the [AMICI documentation](https://amici.readthedocs.io/en/latest/)."
+   ]
   }
  ],
  "metadata": {
