--- a/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
+++ b/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
@@ -89,8 +89,7 @@
     "for reaction in sbml_model.getListOfReactions():\n",
     "    reactants = \" + \".join(\n",
     "        [\n",
-    "            \"%s %s\"\n",
-    "            % (\n",
+    "            \"{} {}\".format(\n",
     "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
     "                r.getSpecies(),\n",
     "            )\n",
@@ -99,8 +98,7 @@
     "    )\n",
     "    products = \" + \".join(\n",
     "        [\n",
-    "            \"%s %s\"\n",
-    "            % (\n",
+    "            \"{} {}\".format(\n",
     "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
     "                r.getSpecies(),\n",
     "            )\n",
@@ -109,7 +107,7 @@
     "    )\n",
     "    reversible = \"<\" if reaction.getReversible() else \"\"\n",
     "    print(\n",
-    "        \"%3s: %10s %1s->%10s\\t\\t[%s]\"\n",
+    "        \"%3s: %10s %1s->%10s\\t\\t[%s]\"  # noqa: UP031\n",
     "        % (\n",
     "            reaction.getName(),\n",
     "            reactants,\n",
@@ -334,7 +332,7 @@
    "metadata": {},
    "source": [
     "For many biological systems, it is reasonable to assume that they start in a\n",
-    " steady state. In this example we want to specify an experiment where a pretreatment with a drug is performed _before_ the kinase is added. We assume that the pretreatment is sufficiently long such that the system reaches steadystate before the kinase is added. To implement this in amici, we can specify `fixedParametersPreequilibration` in the `ExpData` object. This automatically adds a preequilibration phase where the model is run to steadystate, before regular simulation starts. Here we set `DRUG_0=3` and `KIN_0=0` for the preequilibration. This means that there is no kinase available in the preequilibration phase. "
+    " steady state. In this example we want to specify an experiment where a pretreatment with a drug is performed _before_ the kinase is added. We assume that the pretreatment is sufficiently long such that the system reaches steadystate before the kinase is added. To implement this in amici, we can specify `fixedParametersPreequilibration` in the `ExpData` object. This automatically adds a preequilibration phase where the model is run to steadystate, before regular simulation starts. Here we set `DRUG_0=3` and `KIN_0=0` for the preequilibration. This means that there is no kinase available in the preequilibration phase."
    ]
   },
   {
