--- a/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -472,6 +472,8 @@
     "        my=jnp.array(my),\n",
     "        iys=jnp.array(iys),\n",
     "        iy_trafos=jnp.array(iy_trafos),\n",
+    "        ops=jnp.zeros((*my.shape[:2], 0)),\n",
+    "        nps=jnp.zeros((*my.shape[:2], 0)),\n",
     "        solver=diffrax.Kvaerno5(),\n",
     "        controller=diffrax.PIDController(atol=1e-8, rtol=1e-8),\n",
     "        steady_state_event=diffrax.steady_state_event(),\n",
