No flattening of timepoint specific overrides in jax (#2641)
* first working implementation

* bugfixes

* vectorisation go brrrrr

* add doc, workaround Zhao_QuantBiol2020

* fixup

* fixup

* fixup

* fixup

* Update ExampleJaxPEtab.ipynb

* fix notebook

* fix pysb

* fixup

* fixup petab 0006 jax

* fix noise parameters

* fixup noise model

* fixup

* fixup sigma

* remove workaround

* Apply suggestions from code review

Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

* Update de_model.py

* Update pytest.ini

* Update de_model.py

* Update pysb_import.py

* fixup

---------

Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

--- a/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/python/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -457,6 +457,8 @@
     "my = jax_problem._my[ic, :]\n",
     "iys = jax_problem._iys[ic, :]\n",
     "iy_trafos = jax_problem._iy_trafos[ic, :]\n",
+    "ops = jax_problem._op_numeric[ic, :]\n",
+    "nps = jax_problem._np_numeric[ic, :]\n",
     "\n",
     "# Load parameters for the specified condition\n",
     "p = jax_problem.load_parameters(simulation_condition[0])\n",
@@ -472,6 +474,8 @@
     "        my=jnp.array(my),\n",
     "        iys=jnp.array(iys),\n",
     "        iy_trafos=jnp.array(iy_trafos),\n",
+    "        ops=jnp.array(ops),\n",
+    "        nps=jnp.array(nps),\n",
     "        solver=diffrax.Kvaerno5(),\n",
     "        controller=diffrax.PIDController(atol=1e-8, rtol=1e-8),\n",
     "        steady_state_event=diffrax.steady_state_event(),\n",
