Move documentation -> doc
* Use more canonical name documentation/ -> doc/
* Build doxygen documentation under doc/build_doxygen/ instead of doc/
* Make Doxyfile compatible with recent doxygen

--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# AMICI example notebooks\n",
     "\n",
-    "* [Getting started](../documentation/GettingStarted.ipynb)\n",
+    "* [Getting started](../doc/GettingStarted.ipynb)\n",
     "\n",
     "  Brief intro to AMICI for first-time users.\n",
     "\n",
