--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -65,9 +65,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "fig = Image(\n",
-    "    filename=\"../../../documentation/gfx/steadystate_solver_workflow.png\"\n",
-    ")\n",
+    "fig = Image(filename=\"../../../doc/gfx/steadystate_solver_workflow.png\")\n",
     "fig"
    ]
   },
