Doc: Update ExampleEquilibrationLogic.ipynb
Until #2582 is addressed, refer to recent paper.

--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# AMICI documentation example of the steady state solver logic\n",
     "\n",
-    "This is an example to document the internal logic of the steady state solver, which is used in preequilibration and postequilibration."
+    "This is an example to document the internal logic of the steady state solver, which is used in preequilibration and postequilibration.\n",
+    "\n",
+    "\n",
+    "**NOTE**: This notebook is somewhat outdated.\n",
+    "For a more recent theoretical overview and benchmarking of AMICI's steady-state and sensitivities at steady-state capabilities, see [this paper](https://doi.org/10.1371/journal.pone.0312148).\n"
    ]
   },
   {
