--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1471,6 +1471,15 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://www.biorxiv.org/content/early/2025/02/23/2025.02.18.638670},
 }
 
+@Electronic{HuckJak2025,
+  author           = {Wilhelm Huck and Miglė Jakštaitė and Tao Zhou and Frank Nelissen and Bob van Sluijs},
+  title            = {Timed batch inputs unlock significantly higher yields for enzymatic cascades},
+  year             = {2025},
+  creationdate     = {2025-03-10T08:55:10},
+  doi              = {10.21203/rs.3.rs-5917349/v1},
+  modificationdate = {2025-03-10T08:58:09},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
