--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1456,6 +1456,30 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://www.biorxiv.org/content/early/2025/01/20/2025.01.16.633337},
 }
 
+@Article{NoordijkRei2025,
+  author           = {Noordijk, Ben and Reinders, Marcel and van Dijk, Aalt D.J. and de Ridder, Dick},
+  journal          = {bioRxiv},
+  title            = {{BADDADAN}: Mechanistic Modelling of Time Series Gene Module Expression},
+  year             = {2025},
+  abstract         = {Plants respond to stresses like drought and heat through complex gene regulatory networks (GRNs). To improve resilience, understanding these is crucial, but large-scale GRNs (\&gt;100 genes) are difficult to model using ordinary differential equations (ODEs) due to the high number of parameters that have to be estimated. Here we solve this problem by introducing BADDADAN, which uses machine learning to identify gene modules{\textemdash}groups of co-expressed and/or co-regulated genes{\textemdash}and constructs an ODE model that predicts gene module dynamics under stress. By integrating time-series gene expression data with prior co-expression data it finds modules that are both coherent and interpretable. We demonstrate BADDADAN on heat and drought datasets of A. thaliana, modelling over 1,000 genes, recovering known mechanistic insights, and proposing new hypotheses. By combining machine learning with mechanistic modelling, BADDADAN deepens our understanding of stressrelated GRNs in plants and potentially other organisms.Competing Interest StatementThe authors have declared no competing interest.},
+  creationdate     = {2025-02-27T17:14:20},
+  doi              = {10.1101/2025.02.18.638670},
+  elocation-id     = {2025.02.18.638670},
+  eprint           = {https://www.biorxiv.org/content/early/2025/02/23/2025.02.18.638670.full.pdf},
+  modificationdate = {2025-02-27T17:14:35},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2025/02/23/2025.02.18.638670},
+}
+
+@Electronic{HuckJak2025,
+  author           = {Wilhelm Huck and Miglė Jakštaitė and Tao Zhou and Frank Nelissen and Bob van Sluijs},
+  title            = {Timed batch inputs unlock significantly higher yields for enzymatic cascades},
+  year             = {2025},
+  creationdate     = {2025-03-10T08:55:10},
+  doi              = {10.21203/rs.3.rs-5917349/v1},
+  modificationdate = {2025-03-10T08:58:09},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
