Remove deprecated CLI options to amici_import_petab

--- a/doc/examples/example_large_models/example_performance_optimization.ipynb
+++ b/doc/examples/example_large_models/example_performance_optimization.ipynb
@@ -85,9 +85,9 @@
     "Example:\n",
     "```bash\n",
     "petab_yaml=\"https://raw.githubusercontent.com/Benchmarking-Initiative/Benchmark-Models-PEtab/master/Benchmark-Models/Froehlich_CellSystems2018/Froehlich_CellSystems2018.yaml\"\n",
-    "/usr/bin/time -v amici_import_petab -y \"$petab_yaml\" --no-compile\n",
+    "/usr/bin/time -v amici_import_petab \"$petab_yaml\" --no-compile\n",
     "# vs.\n",
-    "/usr/bin/time -v amici_import_petab -y \"$petab_yaml\" --no-compile --no-sensitivities\n",
+    "/usr/bin/time -v amici_import_petab \"$petab_yaml\" --no-compile --no-sensitivities\n",
     "```"
    ]
   },
