--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1480,6 +1480,36 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   modificationdate = {2025-03-10T08:58:09},
 }
 
+@Article{JostWei2025,
+  author           = {Jost, Paul Jonas and Weindl, Daniel and Wunderling, Klaus and Thiele, Christoph and Hasenauer, Jan},
+  journal          = {bioRxiv},
+  title            = {Pseudo-time trajectory of single-cell lipidomics: Suggestion for experimental setup and computational analysis},
+  year             = {2025},
+  abstract         = {Cellular heterogeneity is a fundamental facet of cell biology, influencing cellular signaling, metabolism, and gene regulation. Its accurate quantification requires measurements at the single-cell level. Most high-throughput single-cell technologies provide only a snapshot of cellular heterogeneity at a specific time point because the measurement is destructive. This limits our current ability to understand the dynamics of cellular behavior and quantify cell-specific parameters.We propose an experimental setup combined with a model-based analysis framework, enabling the extraction of longitudinal data from a single destructive measurement. Although broadly applicable, we focus on lipid metabolism, a domain where obtaining longitudinal single-cell data has remained elusive due to technical constraints.Our method leverages multiple labels whose measurements are linked to a shared dynamic. This allows the estimation of cell-specific parameters and the quantification of heterogeneity. This framework establishes a foundation for future investigations, providing a roadmap toward a deeper understanding of dynamic cellular processes.Competing Interest StatementThe authors have declared no competing interest.},
+  creationdate     = {2025-04-23T11:16:11},
+  doi              = {10.1101/2025.04.11.648323},
+  elocation-id     = {2025.04.11.648323},
+  eprint           = {https://www.biorxiv.org/content/early/2025/04/17/2025.04.11.648323.full.pdf},
+  modificationdate = {2025-04-23T11:16:11},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2025/04/17/2025.04.11.648323},
+}
+
+@Article{PerssonFro2025,
+  author           = {Persson, Sebastian and Frohlich, Fabian and Grein, Stephan and Lomna, Torkel and Ognissanti, Damiano and Hassselgren, Viktor and Hasenauer, Jan and Cvijovic, Marija},
+  journal          = {bioRxiv},
+  title            = {PEtab.jl: Advancing the Efficiency and Utility of Dynamic Modelling},
+  year             = {2025},
+  abstract         = {Dynamic models are useful to study processes ranging from cell signalling to cell differentiation. Common modelling workflows, such as model exploration and parameter estimation, are computationally demanding. The Julia programming language is a promising tool to address these computational challenges. To evaluate it, we developed SBMLImporter.jl and PEtab.jl, a package for model fitting. SBMLImporter.jl was used to evaluate different stochastic simulators against PySB and RoadRunner, overall Julia simulators proved fastest. For Ordinary Differential Equations (ODE) models solvers, gradient methods, and parameter estimation performance were evaluated using PEtab benchmark problems. For the latter two tasks PEtab.jl was compared against pyPESTO, which employs the high-performance AMICI library. Guidelines for choosing ODE solver were produced by evaluating 31 ODE solvers for 29 models. Further, by leveraging automatic differentiation PEtab.jl proved efficient and, for up to medium-sized models, was often at least twice faster than pyPESTO, showcasing how Julia{\textquoteright}s ecosystem can accelerate modelling workflows.Competing Interest Statement.F consults for DeepOrigin, no impact on study.Swedish Research CouncilSwedish Research Council, , VR2023-04319, VR2017-05117Swedish Foundation for Strategic ResearchSwedish Foundation for Strategic Research, , FFL15-0238},
+  creationdate     = {2025-05-05T09:44:36},
+  doi              = {10.1101/2025.04.30.651378},
+  elocation-id     = {2025.04.30.651378},
+  eprint           = {https://www.biorxiv.org/content/early/2025/05/04/2025.04.30.651378.full.pdf},
+  modificationdate = {2025-05-05T09:44:36},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2025/05/04/2025.04.30.651378},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
