GHA: Load PEtab benchmark problems from Pages
Closes https://github.com/AMICI-dev/AMICI/issues/2738

See also https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab/issues/264

--- a/doc/examples/example_petab/petab.ipynb
+++ b/doc/examples/example_petab/petab.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "model_name = \"Boehm_JProteomeRes2014\"\n",
     "# local path or URL to the yaml file for the PEtab problem\n",
-    "petab_yaml = f\"https://raw.githubusercontent.com/Benchmarking-Initiative/Benchmark-Models-PEtab/master/Benchmark-Models/{model_name}/{model_name}.yaml\"\n",
+    "petab_yaml = f\"https://benchmarking-initiative.github.io/Benchmark-Models-PEtab/tree/Benchmark-Models/{model_name}/{model_name}.yaml\"\n",
     "# load the problem using the PEtab library\n",
     "petab_problem = petab.Problem.from_yaml(petab_yaml)"
    ]
