--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1542,6 +1542,22 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://www.biorxiv.org/content/early/2025/05/15/2025.05.12.653312},
 }
 
+@Article{SchulzBle2024,
+  author           = {Schulz, Melanie and Bleser, Sanne and Groels, Manouk and Bošnački, Dragan and Burger, Jan A. and Chiorazzi, Nicholas and Marr, Carsten},
+  journal          = {iScience},
+  title            = {Mathematical multi-compartment modeling of chronic lymphocytic leukemia cell kinetics under ibrutinib},
+  year             = {2024},
+  issn             = {2589-0042},
+  month            = dec,
+  number           = {12},
+  pages            = {111242},
+  volume           = {27},
+  creationdate     = {2025-06-02T16:49:50},
+  doi              = {10.1016/j.isci.2024.111242},
+  modificationdate = {2025-06-02T16:49:50},
+  publisher        = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
