--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1558,6 +1558,22 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Elsevier BV},
 }
 
+@Article{WangRau2023,
+  author           = {Wang, Dantong and Rausch, Christian and Buerger, Simon A. and Tschuri, Sebastian and Rothenberg-Thurley, Maja and Schulz, Melanie and Hasenauer, Jan and Ziemann, Frank and Metzeler, Klaus H. and Marr, Carsten},
+  journal          = {iScience},
+  title            = {Modeling early treatment response in AML from cell-free tumor DNA},
+  year             = {2023},
+  issn             = {2589-0042},
+  month            = dec,
+  number           = {12},
+  pages            = {108271},
+  volume           = {26},
+  creationdate     = {2025-06-02T16:52:43},
+  doi              = {10.1016/j.isci.2023.108271},
+  modificationdate = {2025-06-02T16:52:43},
+  publisher        = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
