--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1574,6 +1574,16 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Elsevier BV},
 }
 
+@PhdThesis{Ernst2024,
+  author           = {Ernst, Ariane},
+  title            = {Mathematical Modeling and Analysis of Neurotransmission},
+  year             = {2024},
+  type             = {Dissertation},
+  creationdate     = {2025-06-16T12:42:10},
+  modificationdate = {2025-06-16T12:42:10},
+  url              = {http://dx.doi.org/10.17169/refubium-47210},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
