--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1527,6 +1527,63 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://doi.org/10.1371/journal.pcbi.1013076},
 }
 
+@Article{PathiranaBer2025,
+  author           = {Pathirana, Dilan and Bergmann, Frank T. and Doresic, Domagoj and Lakrisenko, Polina and Persson, Sebastian and Neubrand, Niklas and Timmer, Jens and Kreutz, Clemens and Binder, Harald and Cvijovic, Marija and Weindl, Daniel and Hasenauer, Jan},
+  journal          = {bioRxiv},
+  title            = {{PEtab Select}: specification standard and supporting software for automated model selection},
+  year             = {2025},
+  abstract         = {A central question in mathematical modeling of biological systems is determining which processes are relevant and how they can be described. There are often competing hypotheses, which yield different models. Model comparison requires parameter optimization and sampling methods. Yet, standards for the specification of model selection problems and the swift evaluation of a broad spectrum of approaches are not available. PEtab Select addresses this challenge by providing a concise, standardized specification of model selection and its associated calibration problems through a new file format standard and software package. It facilitates the compact representation of even very large model selection problems; in one example, billions of model alternatives. PEtab Select builds on the PEtab standard for the specification of parameter estimation problem and enables the use of state-of-the-art modelling and calibration workflows, i.e., COPASI, Data2Dynamics, PEtab.jl, and pyPESTO. It supports common model selection criteria (e.g., Akaike and Bayesian information criterion) and can be easily extended to use others. To ensure flexibility, PEtab Select implements several model space exploration approaches, including basic brute-force, forward, and backward selection, and also advanced, flexible selection methods. PEtab Select introduces the first standardization of model selection tasks, filling a critical gap in existing computational pipelines. It constitutes an essential contribution to FAIR research software in systems biology by promoting interoperability and reusability in model selection.Competing Interest StatementThe authors have declared no competing interest.},
+  creationdate     = {2025-05-16T11:44:50},
+  doi              = {10.1101/2025.05.12.653312},
+  elocation-id     = {2025.05.12.653312},
+  eprint           = {https://www.biorxiv.org/content/early/2025/05/15/2025.05.12.653312.full.pdf},
+  modificationdate = {2025-05-16T11:44:50},
+  publisher        = {Cold Spring Harbor Laboratory},
+  url              = {https://www.biorxiv.org/content/early/2025/05/15/2025.05.12.653312},
+}
+
+@Article{SchulzBle2024,
+  author           = {Schulz, Melanie and Bleser, Sanne and Groels, Manouk and Bošnački, Dragan and Burger, Jan A. and Chiorazzi, Nicholas and Marr, Carsten},
+  journal          = {iScience},
+  title            = {Mathematical multi-compartment modeling of chronic lymphocytic leukemia cell kinetics under ibrutinib},
+  year             = {2024},
+  issn             = {2589-0042},
+  month            = dec,
+  number           = {12},
+  pages            = {111242},
+  volume           = {27},
+  creationdate     = {2025-06-02T16:49:50},
+  doi              = {10.1016/j.isci.2024.111242},
+  modificationdate = {2025-06-02T16:49:50},
+  publisher        = {Elsevier BV},
+}
+
+@Article{WangRau2023,
+  author           = {Wang, Dantong and Rausch, Christian and Buerger, Simon A. and Tschuri, Sebastian and Rothenberg-Thurley, Maja and Schulz, Melanie and Hasenauer, Jan and Ziemann, Frank and Metzeler, Klaus H. and Marr, Carsten},
+  journal          = {iScience},
+  title            = {Modeling early treatment response in AML from cell-free tumor DNA},
+  year             = {2023},
+  issn             = {2589-0042},
+  month            = dec,
+  number           = {12},
+  pages            = {108271},
+  volume           = {26},
+  creationdate     = {2025-06-02T16:52:43},
+  doi              = {10.1016/j.isci.2023.108271},
+  modificationdate = {2025-06-02T16:52:43},
+  publisher        = {Elsevier BV},
+}
+
+@PhdThesis{Ernst2024,
+  author           = {Ernst, Ariane},
+  title            = {Mathematical Modeling and Analysis of Neurotransmission},
+  year             = {2024},
+  type             = {Dissertation},
+  creationdate     = {2025-06-16T12:42:10},
+  modificationdate = {2025-06-16T12:42:10},
+  url              = {http://dx.doi.org/10.17169/refubium-47210},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
