doc: ignore simulation failures in spline example
Reduce workflow failures - resample failed optimization startpoints, and reduce number of required starts in exchange.

--- a/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "# If running as a GitHub action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv(\"GITHUB_ACTIONS\") is not None:\n",
-    "    n_starts = 25\n",
+    "    n_starts = 5\n",
     "    pypesto_optimizer = pypesto.optimize.FidesOptimizer(\n",
     "        verbose=logging.WARNING, options=dict(maxiter=10)\n",
     "    )\n",
@@ -1016,7 +1016,10 @@
     "# Import PEtab problem into pyPESTO\n",
     "pypesto_problem = pypesto.petab.PetabImporter(\n",
     "    petab_problem, model_name=name\n",
-    ").create_problem()"
+    ").create_problem(\n",
+    "    # re-sample optimization startpoints in case of simulation errors\n",
+    "    startpoint_kwargs={\"check_fval\": True, \"check_grad\": True}\n",
+    ")"
    ]
   },
   {
